Working to fix scrolling on mobile

--- a/src/styles/components/_basicpage.scss
+++ b/src/styles/components/_basicpage.scss
@@ -3,6 +3,17 @@ div::-webkit-scrollbar {
   background-color: rgba(0,0,0,0);
 }
 
+.new-area {
+    margin: 0 auto;
+    width: 300px;
+    height: 300px;
+    background: #e5e5e5;
+
+    .new-content {
+        width: 400px;
+    }
+}
+
 .page {
     display: flex;
     flex-direction: column;
@@ -11,6 +22,8 @@ div::-webkit-scrollbar {
     max-width: 85%;
     padding: 0;
     transition: .6s ease;
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
     
     @media (min-width: 768px) {
         max-width: 70%;
@@ -201,3 +214,4 @@ div::-webkit-scrollbar {
         font-size: 4em;
     }
 }
+
